# kukulkan-trade

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  migrate.yml
config/: risk_rules.py  settings.py  strategies.py  universe.py
data/agent-workspace/: .gitignore  CLAUDE.md  mcp.json
deploy/: CLAUDE.md  KUKULKAN_INFRA_GUIDE.md  atlas-bot.service  kukulkan-api.service  kukulkan-bot.service  kukulkan-dashboard.service  setup.sh
deploy/landing/: index.html
deploy/nginx/: app.kukulkan.trade  kukulkan.trade
docs/: agentic-proposal.md  claude-code-rearchitecture.md  frontend-api-phase33.1.md  frontend-api-phase33.2.md  frontend-api-phase33.md  frontend-api-phase35.md  frontend-api-phase38.md  frontend-api-phase39.md  frontend-api-phase4.md  frontend-api-phase42.md  pg-setup.md  plan-agentic-v2.md  project-state.md
docs/claude/: agent.md  analysis.md  api.md  chat.md  data.md  infra.md  pipeline.md  tenants.md
docs/proposals/: ticker-signal-engine-and-news-expansion.md
migrations/: 001_tenants_nullable_credentials.sql  002_tenant_equity_allocation.sql  003_pending_rebalance.sql  004_trailing_stops_earnings_watchlist.sql  005_discovered_tickers_tenant_id.sql  006_intraday_snapshots.sql  007_agent_loop.sql  008_outcome_tracking.sql  009_persistent_agent.sql  010_posture_playbook_calibration.sql  011_agent_budget_log.sql  012_foreign_keys.sql  013_improvement_loop.sql  014_extended_hours.sql  015_ticker_signals.sql  016_sentiment_indicators.sql  017_use_claude_code.sql  018_post_rearchitecture_cleanup.sql  019_drop_cost_columns.sql  020_drop_conversation_cost.sql
migrations/pg/: 001_baseline.sql  002_add_indexes.sql  003_chat_messages.sql  004_trailing_stop_agent_adjusted.sql
prompts/: aggressive.txt  conservative.txt
scripts/: backfill_trades.py  close_shorts.py  fix_dup_trades.py  fix_portfolio_a_cash.py  migrate.py  migrate_data.py  rebalance_cash.py  test_claude_code.py
src/: intraday.py  main.py  orchestrator.py
src/agent/: agent_runner.py  budget_tracker.py  claude_agent.py  (+18 more)
tests/: conftest.py  test_actions_direct_execution.py  test_afterhours_pnl.py  test_agent_integration.py  test_agent_intelligence.py  test_agent_memory.py  test_agent_runner.py  test_agent_runner_persistent.py  test_ai_backtest.py  test_allocations.py  test_alpaca_executor.py  test_api.py  test_api_agent_insights.py  test_api_budget.py  test_api_improvements.py  test_api_inverse_exposure.py  test_api_retry_fallback.py  test_auto_apply.py  test_backtest.py  test_base_fetcher.py  test_btc_agent.py  test_btc_data.py  test_budget_tracker.py  test_chat_api.py  test_chat_invoker.py  test_chat_model.py  test_claude_agent.py  test_claude_invoker.py  test_client_factory.py  test_complexity_detector.py  test_context_manager.py  test_context_manager_cache.py  test_context_reduction.py  test_conversation_store.py  test_conversations_api.py  test_conviction_calibrator.py  test_crypto.py  test_crypto_universe.py  test_dashboard.py  test_database.py  (+129 more)
(+88 files in other folders)
